ahora si que si

--- a/Prueba/style.css
+++ b/Prueba/style.css
@@ -256,7 +256,7 @@ body{
 
 .imagen-grid {
     overflow: hidden;
-    border: 1px solid #ccc;
+    border: 1px transparent;
     margin-left: 10px;
 }
 
